--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# dasp = "0.11.0"
 glium = "*"
+wav = "1.0.0"
+png = "0.17.2"
+rand = "0.8.4"
